[package]
name = "web-socket-listener-two"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version= "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"
url = "2.5.3"
futures-util = "0.3.31"
tungstenite = "0.24.0"
rand = "0.8.5"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
tracing = "0.1.40"
bytes = "1.8.0"
